Solved scrollbars problems and customize them

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,21 @@ body{
     box-sizing: border-box;
 }
 
-
 .photo{
     margin-top: 140vh;
     min-height: 40vh;
 }
 
+::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+/* Track */
+::-webkit-scrollbar-track {
+border-radius: 100px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #7B61FF;
+}
